<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_categoria_geral_key"
        android:title="@string/pref_titulo_geral">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_cesta"
            android:summary="@string/pref_descricao_cesta"
            android:title="@string/pref_titulo_cesta" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_categoria_apagatudo_key"
        android:title="@string/pref_titulo_apagatudo">
        <Preference
            android:key="@string/pref_key_apagatudo"
            android:summary="@string/pref_descricao_apagatudo"
            android:title="@string/pref_titulo_apagatudo" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_categoria_bkup_restaura_key"
        android:title="@string/pref_titulo_bkup_restaura">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_auto_bkup"
            android:summary="@string/pref_descricao_auto_bkup_sim"
            android:title="@string/pref_titulo_auto_bkup" />
        <Preference
            android:key="@string/pref_key_bkup"
            android:summary="@string/pref_descricao_bkup"
            android:title="@string/pref_titulo_bkup" />
        <Preference
            android:key="@string/pref_key_restaura"
            android:summary="@string/pref_descricao_restaura"
            android:title="@string/pref_titulo_restaura" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_categoria_info_key"
        android:title="@string/pref_titulo_categoria_info">
        <Preference
            android:key="@string/pref_key_autor"
            android:summary="@string/pref_descricao_autor"
            android:title="@string/pref_titulo_autor" />
        <Preference
            android:key="@string/pref_key_versao"
            android:summary="@string/pref_descricao_versao"
            android:title="@string/pref_titulo_versao" />
    </PreferenceCategory>

</PreferenceScreen>