<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mskapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/botao_novo_item"
        android:icon="@drawable/ic_add_circle_white"
        android:orderInCategory="1"
        android:title="@string/menu_novo"
        mskapp:showAsAction="always" />
    <item
        android:id="@+id/botao_refaz_lista"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="2"
        android:title="@string/menu_refazer"
        mskapp:showAsAction="always" />
    <item
        android:id="@+id/ajustes"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_ajustes" />
    <item
        android:id="@+id/sobre"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_sobre" />

</menu>