<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mskapp="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/linha_fundo"
    android:padding="5.0dip">

    <ImageView
        android:id="@+id/ivMenuLista"
        android:layout_width="42dp"
        android:layout_height="54dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/icon"
        android:tint="@color/cinza"
        mskapp:srcCompat="@drawable/ic_list_grey" />

    <TextView
        android:id="@+id/tvNomeLista"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/infoItem"
        android:layout_toRightOf="@+id/ivMenuLista"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="5.0dip"
        android:paddingRight="5.0dip"
        android:text="@string/item"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/preto" />

    <LinearLayout
        android:id="@+id/infoItem"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:weightSum="2.0">

        <TextView
            android:id="@+id/tvItensLista"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/dica_unid" />

        <TextView
            android:id="@+id/tvValorLista"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/dica_zero" />

    </LinearLayout>

</RelativeLayout>