<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="clip_horizontal"
    android:orientation="vertical"
    tools:context=".EditaItem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etNomeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/outro_item"
                    android:inputType="textCapSentences|text|textAutoCorrect|textAutoComplete"
                    android:textColor="@color/preto" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etDescricaoItem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:ems="10"
                    android:hint="@string/descricao_item"
                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect|textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.0">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/etQuantidadeItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ems="10"
                        android:hint="@string/quantidade"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spUnidadeItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:entries="@array/ListaUnidades" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etValorItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/valor"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbCalendario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/dica_calendario"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/tvDataAlarme"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/icone_fundo"
                    android:contentDescription="@string/icon"
                    android:drawableLeft="@drawable/data"
                    android:drawableStart="@drawable/data"
                    android:text="@string/dica_dia_alarme"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/preto" />

                <Button
                    android:id="@+id/tvHorarioAlarme"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:background="@color/icone_fundo"
                    android:contentDescription="@string/icon"
                    android:drawableLeft="@drawable/horario"
                    android:drawableStart="@drawable/horario"
                    android:text="@string/dica_horario_alarme"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/preto" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ivCancela"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/botao_fundo"
            android:contentDescription="@string/icon"
            android:drawableLeft="@drawable/ic_cancel_white"
            android:drawableStart="@drawable/ic_cancel_white"
            android:text="@string/dica_cancela"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btModificaItemLista"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/botao_fundo"
            android:contentDescription="@string/icon"
            android:drawableLeft="@drawable/ic_done_white"
            android:drawableStart="@drawable/ic_done_white"
            android:text="@string/dica_salvar"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/branco" />
    </LinearLayout>

</LinearLayout>